--- a/core/button_stats/html/button_stats_list.phtml
+++ b/core/button_stats/html/button_stats_list.phtml
@@ -38,7 +38,7 @@
 					$user_id = navigator::get_user_id();
 
 					# Verificamos que el usuario logeado es administrador
-					$is_global_admin = component_security_administrator::is_global_admin($user_id);
+					$is_global_admin = security::is_global_admin($user_id);
 					*/
 
 					/*
