--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1039,9 +1039,9 @@
 			}
 
 			&.inputs_container >li {
-				flex: 1 1 100%;
-				padding-bottom: 0.25em;
 				position: relative;
+				flex: 1 1 100%;
+				//padding-bottom: 0.25em;
 			}
 		}
 	}
