--- a/core/dd/css/dd_list.less
+++ b/core/dd/css/dd_list.less
@@ -8,6 +8,10 @@
 }
 #wrapGeneral table {
   width: 100%;
+
+  td {
+  	padding: 0;
+  }
 }
 a:link {
   text-decoration: none;
@@ -137,7 +141,7 @@ select {
 #tesauro_content {
   font-size: 11px;
   color: #3C3C3C;
-  padding-top: 5px;
+  padding-top: 1em;
 }
 .marginTopNoHead {
   margin-top: 8px;
@@ -228,13 +232,13 @@ select {
   margin-bottom: 2px;
   text-align: left;
   background-color: #afafaf;
-  background-image: url('../../dd/images/th_ramp.png');
+  //background-image: url('../../dd/images/th_ramp.png');
   border: 0px;
   border-style: inset;
   border-color: #DBDBDB;
-  border-radius: 5px;
+  border-radius: 3px;
   text-shadow: 0 0 0 transparent, 0 1px 0 #cdcdcd;
-  box-shadow: 0 1px 2px #aeaeae;
+  //box-shadow: 0 1px 2px #aeaeae;
 }
 #tsTreeLOAD .tsHeader .tsHeaderLeft {
   float: left;
@@ -267,8 +271,8 @@ select {
   cursor: pointer;
 }
 #tsTreeLOAD .tsHeader_modelo {
-  background-color: #afafaf;
-  background-image: url('../../dd/images/th_ramp3.png');
+  background-color: #EC934B;
+  //background-image: url('../../dd/images/th_ramp3.png');
 }
 /* FIN TESAURO JERÁRQUICO */
 .nOrden {
@@ -519,3 +523,25 @@ img.btnEdit { width:15px; height:15px;  margin:0px; margin-top:-1px; cursor:poin
 */
 /* only for safari */
 /*# sourceMappingURL=dd_list.css.map */
+
+
+
+// header
+	.header {
+		width: 100%;
+		height: 3em;
+		margin: 0;
+		padding: 0;
+		background-color: #f48c1c;
+		color: white;
+		display: flex;
+		align-items: baseline;
+
+		>h2 {
+			padding: .25em;
+			padding-left: 1em;
+			padding-right: 1em;
+		}
+	}
+
+
