--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -14,13 +14,13 @@
 
 		// > select only the first '.content_data' inside css_wrap_portal
 		> .content_data {
-			width: 100%;		
+			width: 100%;
 			display: table ;
 			text-align: right;
 			position: relative;
 			//top: -25px;
-			//margin-bottom: -20px;		
-			//background-color: #edbff5;  
+			//margin-bottom: -20px;
+			//background-color: #edbff5;
 			//overflow: auto;
 		}
 
@@ -31,8 +31,8 @@
 			width: 50% !important; // Portal always is in vertical mode
 		}
 	}
-		
-		
+
+
 	.component_relation_portal {
 
 	}
@@ -95,7 +95,7 @@
 	.btn_view_mosaic {
 		background: url('../../themes/default/view_mosaic.svg') center center no-repeat;
 	}
-	/* Button more images 
+	/* Button more images
 	---------------------------------------------- */
 	div.portal_toggle_more_elements_more {
 		background-position: 0 -96px;
@@ -143,13 +143,13 @@
 
 		.more_items {
 			float: right;
-			text-align: right;			
+			text-align: right;
 		}
 	}
 	/* portal_btn_pagination
 	-------------------------------------------------------------- */
 	.portal_btn_pagination {
-		//background-color: #C9C1F4;		
+		//background-color: #C9C1F4;
 		z-index: 999999;
 		padding: 5px;
 		display: block;
@@ -164,7 +164,7 @@
 		font-size: 14px;
 		border: 1px solid #e1e0e0;
 		border-radius: 4px;
-		}		
+		}
 		.portal_btn_pagination.active {
 			opacity: 1;
 			cursor: pointer;
@@ -195,7 +195,7 @@
 
 
 
-/* TD ID ICONS 
+/* TD ID ICONS
 ---------------------------------------------- */
 	.th_large_icon {
 		background-position: -216px 0;
@@ -208,12 +208,12 @@
 
 
 
-/* PORTAL INSIDE 
+/* PORTAL INSIDE
 ---------------------------------------------- */
 	table.table_portal_inside {
 		margin: 0;
 		/*margin-top: -5px;*/
-		
+
 		td {
 			border: none;
 		}
@@ -222,7 +222,7 @@
 			font-size: 90%;
 			padding: 0 !important;
 		}
-		
+
 		div.portal_first_element_content {
 			min-height: 0px;
 			text-align: left;
@@ -230,9 +230,9 @@
 		}
 
 	}
-		
-		
-		
+
+
+
 
 
 
@@ -253,24 +253,24 @@
 /* TABLE_PORTAL_ROWS_LIST HEAD / BODY
 ------------------------------------------------------- */
 	.table_portal_rows_list thead {
-		
-	}		
+
+	}
 	.table_portal_rows_list tbody {
 
 	}
 	/* TABLE SCROLL ALLOW
 	------------------------------------------------------- */
-	.table_portal_rows_list thead, .table_portal_rows_list tbody { 
-		
+	.table_portal_rows_list thead, .table_portal_rows_list tbody {
+
 	}
-	.table_portal_rows_list tbody {		
-		
+	.table_portal_rows_list tbody {
+
 	}
-	.table_portal_rows_list tr {	
-	
+	.table_portal_rows_list tr {
+
 	}
 	.table_portal_rows_list th, .table_portal_rows_list td {
-		
+
 	}
 
 
@@ -301,7 +301,7 @@
 		height: 17px;
 		width: 36px;
 		margin: 0;
-		padding: 0;	
+		padding: 0;
 		display: block;
 		vertical-align: middle;
 		text-align: center;
@@ -310,7 +310,7 @@
 		top: 6px;
 		cursor: default;
 	}
-	// Header td 
+	// Header td
 	//.portal_section .table_row.row_header .column._tag_id,
 	.portal_section .table_row .column._tag_id {
 		width: 46px !important;
@@ -351,7 +351,7 @@
 
 
 
-	/* VIEW_MOSAIC 
+	/* VIEW_MOSAIC
 	------------------------------------------------------- */
 	.wrap_component_view_mosaic {
 
@@ -371,7 +371,7 @@
 			height: 100%;
 			background-size: cover;
 		}
-	
+
 		.mosaic_ul {
 			//background-color: #76BDD4;
 			//width: 100%;
@@ -417,7 +417,7 @@
 				.mosaic_li .button_edit {
 					top: 0;
 					background-image: url('../../themes/default/icon_edit.svg');
-				}				
+				}
 				.mosaic_li .button_delete {
 					top: initial;
 					bottom: 0;
@@ -456,7 +456,7 @@
 
 		//overflow: auto;
 		//overflow: hidden;
-		
+
 		// Wrappers around cells and other wrappers
 		.rows_wrapper {
 		  //display: flex;
@@ -482,7 +482,7 @@
 			border-bottom: 1px solid #e0e0e0;
 			border-collapse: collapse;
 			//padding-top: 2px;
-			
+
 			align-items: flex-start;	// flex-start | flex-end | center | baseline | stretch;
 
 			.column {
@@ -504,9 +504,9 @@
 				//font-size: 96%;
 				//align-content: flex-start ; // flex-start | flex-end | center | space-between | space-around | stretch;
 				//flex: 1 0 90px;
-  				//box-sizing: border-box;  
-  				background-color: rgba(249,249,249,0.85);				
-				font-size: 11px;					
+  				//box-sizing: border-box;
+  				background-color: rgba(249,249,249,0.85);
+				font-size: 11px;
 			}
 			.column.component_text_area, .column.component_autocomplete_hi ul.css_autocomplete_ul, column.component_autocomplete ul.css_autocomplete_ul {
 				max-height: 58px;
@@ -521,7 +521,7 @@
 				max-width: 68px !important;
 			}
 			.column.component_image, .column.component_av, .column:last-of-type {
-				//@media screen and (max-width: @movil_max_width) {					
+				//@media screen and (max-width: @movil_max_width) {
 					max-width: 102px !important;
 				//}
 				flex-grow: 0;
@@ -539,7 +539,7 @@
 			}
 		}
 		.table_row.row_header {
-			//background-color: #82FFCB;		
+			//background-color: #82FFCB;
 
 			.column {
 				padding-left: 4px;
@@ -569,7 +569,7 @@
 			}
 			.column:last-of-type {
 				border-top-right-radius: 5px;
-    			
+
 			}
 			// Text header column truncate
 			.column:last-of-type > span {
@@ -581,7 +581,7 @@
 
 		.id_column {
 			padding: 0;
-			background-color: #eee;	
+			background-color: #eee;
 			padding: 0;
 			text-align: left;
 
@@ -605,27 +605,27 @@
 				//padding-top: 9px;
 				//padding-left: 7px;
 				line-height: 1em;
-				font-size: 15px;				
+				font-size: 15px;
 				}
 				.button_edit:hover {
 					background-color: #67a756;
-					background-image: url('../../themes/default/icon_edit_hover.svg');	
+					background-image: url('../../themes/default/icon_edit_hover.svg');
 				}
 			.button_delete {
 				background-image: url('../../themes/default/icon_delete.svg');
 				background-position: right 8px top 50%;
-				background-size: 16px;				
+				background-size: 16px;
 				}
 				.button_delete:hover {
 					background-image: url('../../themes/default/icon_delete_hover.svg');
-					background-color: #bb3249;	
+					background-color: #bb3249;
 				}
-		}				
+		}
 
 		.section_id_number {
-			display: block;			
+			display: block;
 			text-align: right;
-			line-height: 1em;			
+			line-height: 1em;
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
@@ -651,18 +651,18 @@
 				width: 100%;
 				//min-width: 69px;
 				height: 100%;
-				min-height: 32px;				
+				min-height: 32px;
 				color: #000;
 				opacity: .8;
 				background-repeat: no-repeat;
 				background-position: right 15px top 50%;
-				background-color: #ededed;				
-				background-image: url('../../themes/default/icon_delete.svg');				
+				background-color: #ededed;
+				background-image: url('../../themes/default/icon_delete.svg');
 				background-size: 16px;
 				}
 				.button_delete:hover {
 					background-image: url('../../themes/default/icon_delete_hover.svg');
-					background-color: #bb3249;	
+					background-color: #bb3249;
 				}
 		}
 	}//end .portal_section.view_single_line
@@ -686,18 +686,19 @@
 		.css_wrap_image_portal_list_view_mosaic .content_data,
 		.div_image_portal_list_view_mosaic,
 		.css_wrap_image_portal_list_view_mosaic
-		 {
+		{
 			display: table;
 			width: 100%;
+			background-color: #ffffff;
 		}
-	
+
 		.mosaic_li {
 			//background-color: #a1b796;
 			width: 100%;
    			height: 100%;
    			// min-height: 160px;
 			margin: 0;
-			float: left;			
+			float: left;
 			//display: block;
 			//display: flex;
 			display: block;
@@ -762,7 +763,7 @@
 			//display: none;
 		}
 		.mosaic_li > .mosaic_item {
-			
+
 		}
 		/*
 		.mosaic_li > .mosaic_item > div {
@@ -775,7 +776,7 @@
 			position: relative;
 		}
 		*/
-			
+
 
 		/* OVERRIDE COMPONENTS WRAP
 		------------------------------------------------------- */
@@ -792,14 +793,14 @@
 			width: 100%;
 			height: 100%;
 			background-size: cover;
-		}	
+		}
 
 	}//end .portal_section.view_mosaic
 
 
 
-	
-	
+
+
 
 
 /* PRINT CSS
@@ -815,7 +816,7 @@
 			border-bottom: 1px solid #eeeeee;
 			border-left:none;
 			font-weight: light;
-			padding-bottom: 5px;	
+			padding-bottom: 5px;
 		}
 		.print_table_rows_list td {
 			border: none;
@@ -857,7 +858,13 @@
 
 
 
+// img_image_portal_list_view_mosaic
+	.img_image_portal_list_view_mosaic {
+		width: 100%;
+		height: 160px;
+		object-fit: contain;
+    	object-position: center;
+	}
 
 
 
-	
