--- a/lib/dedalo/html_page/css/html_page.less
+++ b/lib/dedalo/html_page/css/html_page.less
@@ -7,14 +7,14 @@
 
 
 /* RESET */
-html, body, div, image, ul, ol, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, pre, form, p, fieldset, input, abbr, article, aside, command, details, figcaption, figure, footer, 
+html, body, div, image, ul, ol, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, pre, form, p, fieldset, input, abbr, article, aside, command, details, figcaption, figure, footer,
 header, hgroup, mark, meter, nav, output, progress, section, summary, time, label {
 	margin: 0;
 	padding: 0;
 }
 html,body {
-	height:100%; 
-	width: 100%; 
+	height:100%;
+	width: 100%;
 	position: absolute;
 }
 /*
@@ -43,7 +43,7 @@ select {
 }
 html {
 	margin: 0;
-	padding: 0;	
+	padding: 0;
 }
 body {
 	/*background-color: #f7f7f9;*/
@@ -53,7 +53,7 @@ body {
 	/*font: 12px / 18px "lucida grande", "lucida sans unicode", helvetica, arial, verdana, sans-serif;*/
 	font-family: "Oxygen", sans-serif;
 	//font-family: system, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Lucida Grande', 'Oxygen', sans-serif;
-	font-size: 12px;	
+	font-size: 12px;
 	color: #333;
 	//-webkit-font-smoothing: antialiased; // Da problemas con el tesauro !
 }
@@ -63,7 +63,7 @@ a {
 pre {
 	color: #4b5d5e;
 	padding: 5px;
-	word-wrap: break-word;	
+	word-wrap: break-word;
 	line-height: 1.2em;
 }
 label {
@@ -80,7 +80,7 @@ label {
     line-height: 1em;
 }
 .label_modelo_name {
-	font-weight: 100 !important;     
+	font-weight: 100 !important;
     font-family: "Oxygen-light",sans-serif;
     font-size: 80%;
     line-height: 1em;
@@ -89,7 +89,7 @@ label {
 	right: 25px;
 }
 .main_font_light {
-	font-family: "Oxygen-light", sans-serif;	
+	font-family: "Oxygen-light", sans-serif;
 }
 .main_font_bold {
 	font-family: "Oxygen-Bold", sans-serif;
@@ -123,12 +123,12 @@ q:before, q:after { content:''; content:none; }
 	display: none;
 	width: 100%;
 	height: 100%;
-	margin: 0;	
+	margin: 0;
 	height: 100vh;
 }
 .daleks {
 	//background-image: url('../../themes/default/daleks.jpg');
-	background-size: cover;  
+	background-size: cover;
 }
 
 .css_html_page_titulo .css_label {
@@ -223,7 +223,7 @@ q:before, q:after { content:''; content:none; }
 		top: 5px;
 		font-family: Arial, sans-serif;
 		font-weight: bold;
-		//background-image: url("../../themes/default/close.png");		
+		//background-image: url("../../themes/default/close.png");
 	}
 
 
@@ -241,7 +241,7 @@ q:before, q:after { content:''; content:none; }
 	background-color: transparent;
 	background-image: url('../../themes/default/spinner2.gif');
 	background-repeat: no-repeat;
-	background-position: center;	
+	background-position: center;
 	opacity: 0.7;
 	}
 	#html_page_spinner_overlay SPAN {
@@ -268,7 +268,7 @@ q:before, q:after { content:''; content:none; }
 	width: 100%;
 	height: 100%;
 	background-color: #F7F7F9;
-	filter: alpha(opacity=45);	
+	filter: alpha(opacity=45);
 	opacity: 0.45;
 	z-index: 1;
 	cursor: wait;
@@ -286,7 +286,7 @@ q:before, q:after { content:''; content:none; }
 	background-color: #F6F6F6;
 	background-image: url(../../themes/default/spinner2.gif);
 	background-repeat: no-repeat;
-	background-position: center;	
+	background-position: center;
 	opacity: 1;
 }
 .div_spinner_overlay SPAN {
@@ -384,10 +384,10 @@ span.ajax_loading_msg {
 
 
 /* TOOLTIP  (jquery ui)
------------------------------------------ 
+-----------------------------------------
 .ui-tooltip, .dd_tooltip:after {
 	background:#2E2E2E;
-	// border: 1px solid white; 
+	// border: 1px solid white;
 	border: none;
   }
   .ui-tooltip {
@@ -444,7 +444,7 @@ span.ajax_loading_msg {
 	text-align: left;
  }
  .tooltip {
- 	
+
  }
 
 
@@ -495,7 +495,7 @@ span.ajax_loading_msg {
 	/*
 	z-index: 2000;
 	position: absolute;
-	right:0px;	
+	right:0px;
 	background-color: #f8f8f8;
 	bottom: 50px;
 	*/
@@ -519,7 +519,7 @@ span.ajax_loading_msg {
 		}
 		.gridster ul li {
 			/*background-color:#dfb96b;*/
-			overflow: hidden;	/**/	
+			overflow: hidden;	/**/
 		}
 		.gridster ul li:hover {
 			background-color: #d5e7fa;
@@ -550,7 +550,7 @@ span.ajax_loading_msg {
 }
 
 
-/* Breadcrumb 
+/* Breadcrumb
 ----------------------------------------- */
 .breadcrumb {
 	margin: 0px;
@@ -565,7 +565,7 @@ span.ajax_loading_msg {
 	position: fixed;
 	top: 0;
 	z-index: 100;
-	}	
+	}
 	.breadcrumb .close_window {
 		position: absolute;
 		right: 10px;
@@ -601,7 +601,7 @@ span.ajax_loading_msg {
 	img.note {
 		width: 22px;
 	}
-	.section_struct {  
+	.section_struct {
 		padding: 3px;
 		padding-left: 15px;
 		border: #909090;
@@ -625,7 +625,6 @@ span.ajax_loading_msg {
 
 // raw_msg (used in saml error)
 	.raw_msg {
-
 		background-image: url(../../themes/default/dedalo_icon_big.png);
 		background-repeat: no-repeat;
 		background-position: 0 top;
@@ -656,45 +655,46 @@ span.ajax_loading_msg {
 				padding-left: 30%;
 				padding-right: 30%;
 			}
-
 		}
 
 	}//end raw_msg
 
 
 
+// PRINT
+	@media print {
+		body, #main, #content
+		{
+			color: #000 !important;
+		}
+		a, a:link, a:visited
+		{
+			color: #000 !important;
+			text-decoration: none !important;
+		}
+		#tabs, #globalheader, #globalfooter, #directorynav, .noprint, .hide
+		{
+			display: none !important;
+		}
+		#main a.pdf, #main a.html, #main a.qt, #main a.ical, #main a.dl, #main a.dmg, #main a.zip, #main a.keynote, #main a.audio
+		{
+			padding-left: 0 !important;
+			background-image: none !important;
+		}
+		// * {
+		//     -webkit-print-color-adjust: exact !important;   // Chrome, Safari
+		//     color-adjust: exact !important;                 // Firefox*/
+		// }
+	}
 
 
-/* PRINT
------------------------------------------ */
-@media print {
-	BODY, #main, #content
-	{
-		color: #000 !important;
-	}
-	A, A:link, A:visited
-	{
-		color: #000 !important;
-		text-decoration: none !important;
-	}
-	#tabs, #globalheader, #globalfooter, #directorynav, .noprint, .hide
-	{
-		display: none !important;
-	}
-	#main A.pdf, #main A.html, #main A.qt, #main A.ical, #main A.dl, #main A.dmg, #main A.zip, #main A.keynote, #main A.audio
-	{
-		padding-left: 0 !important;
-		background-image: none !important;
+
+// IPHONE
+	@media screen and (max-device-width: 480px) {
+		html
+		{
+			-webkit-text-size-adjust: none;
+		}
 	}
 
 
-
-/* IPHONE
------------------------------------------ */
-}
-@media screen and (max-device-width: 480px) {
-	HTML
-	{
-		-webkit-text-size-adjust: none;
-	}
-}
