--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -2,13 +2,13 @@
 @common_css: "../../common/css";
 
 // Usage
-@import "@{common_css}/library.less"; 
+@import "@{common_css}/library.less";
 
 
 
 /* WRAP DIV CONTAINER
 ------------------------------------------------------- */
-.css_wrap_image, .css_wrap_image_tm {	
+.css_wrap_image, .css_wrap_image_tm {
 	vertical-align: top;
 	overflow: hidden;
 	height: 400px;
@@ -38,7 +38,7 @@
 	padding: 0;
 	margin: 0;
 	overflow: hidden;
-	width: 100%;	
+	width: 100%;
 	}
 	.table_portal_rows_list .css_wrap_image_portal_list .css_wrap_image_portal_list:before {
 		content: none;
@@ -48,14 +48,14 @@
 		text-align: center;
 	}
 
-.css_wrap_list_image {	
+.css_wrap_list_image {
 	vertical-align: top;
 	overflow: hidden;
 	height: 57px;
 	position: relative;
 	padding: 0;
 	}
- 
+
  img.css_image {
  	//height: 404px;
  	//width: auto;
@@ -84,7 +84,7 @@
 	}
 }
 .canvas_edit {
-	
+
 	/*
 	max-width: 720px;
 	max-height: 404px;
@@ -92,7 +92,7 @@
 	//max-width: 100%;
 	//height: 400px;
 	//height: 100hv;
-	
+
 	height: 100%;
 	//width: 100%;
 	//visibility: hidden;
@@ -109,19 +109,19 @@
 	.image_buttons {
 		background-color: rgba(255,255,255,0.7);
 		display: flex;
-		position: absolute;		
+		position: absolute;
 		top: 10px;
 		left: 10px;
 		z-index: 10;
 		padding: 5px;
 		/*box-shadow: 0 1px 8px #7f7f7f;*/
-		border-radius: 3px;			
+		border-radius: 3px;
 		}
 		.main_buttons {
 			display: block;
 			width: 100;
 			z-index: 99;
-			height: 1.5em;	
+			height: 1.5em;
 
 			>input {
 
@@ -159,9 +159,9 @@
 			padding: 4px;
 			padding-left: 10px;
 			padding-right: 10px;
-			font-weight: normal !important;		
-			text-transform: capitalize;			
-			
+			font-weight: normal !important;
+			text-transform: capitalize;
+
 			z-index: 99999;
 			display: inline-block;
 			border-radius: 3px;
@@ -171,7 +171,7 @@
 		.image_buttons .save_image_path {
 			background-color: #616161 !important;
 			border: 1px solid darken(#616161, 2%);
-			margin-left: 20px;			
+			margin-left: 20px;
 			//box-shadow: 0 2px 8px #999999 inset;
 		}
 		/*
@@ -188,7 +188,7 @@
 		}
 		*/
 
-		
+
 
 		/*  CANVAS TRASCRIPTION
 		--------------------------------------------------- */
@@ -213,25 +213,26 @@
 
 /* URL DEFINED IN STYLE
 ------------------------------------------------------- */
-.div_image_image_in_list {
-	display:inline-block;
-	width: 102px;
-	height: 57px;/* 57px;*/
-	background-repeat: no-repeat;
-	background-position: center;
-	/*background-size: 100%;*/
-	/*background-image: url('../../themes/default/spinner2.gif');
-	background-color: #f5f5f5;*/
-	background-color: rgba(255, 255, 255, 0);
-	}	
-	.div_image_image_in_list img {
-		display: block;
+	.div_image_image_in_list {
+		display:inline-block;
+		width: 102px;
+		height: 57px;/* 57px;*/
+		background-repeat: no-repeat;
+		background-position: center;
+		background-color: rgba(255, 255, 255, 0);
+
+		//object-fit: none;
+	    //object-position: center;
+
+	    img {
+			display: block;
+		}
 	}
-	
+
 
 /* Original
 ------------------------------------------------------- */
-.original_icon {	
+.original_icon {
 	display: inline-block;
 	height: 13px;
 	width: auto;
@@ -249,8 +250,8 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10px !important;
 	vertical-align: middle;
-	cursor: pointer;	
-	margin-left: 3px;	
+	cursor: pointer;
+	margin-left: 3px;
 	opacity: 0.8;
 	text-shadow: none;
 }
@@ -259,7 +260,7 @@
 }
 
 .image_image_in_list {
-	
+
 }
 
 /*
@@ -300,8 +301,8 @@
 }
 
 
-	/* test 
-	--------------- 
+	/* test
+	---------------
 	.sgc_edit>.wrap_component_mupreva660 {
 
 		width: 100%;
@@ -314,7 +315,11 @@
 		.sgc_edit>.wrap_component_mupreva660 .content_data {
 			width: 100%;
 		}*/
-	
+
+
+
+
+
 
 
 
