--- a/lib/dedalo/component_image/html/component_image_list.phtml
+++ b/lib/dedalo/component_image/html/component_image_list.phtml
@@ -16,12 +16,15 @@
 			# CLICK_ACTION
 			$click_action="onclick=\"tool_common.open_player(this,{'type':'component_image','image_full_url':'$image_full_url'});\" ";
 
-			$style = "background-image:url('$thumb_file_url')";
-			$html_contenido .= "<div class=\"thumb_in_list div_image_image_in_list\" style=\"$style\" $click_action ";
-			$html_contenido .= "data-image_id=\"$image_id\" ";
-			$html_contenido .= "data-parent_matrix=\"$parent\" ";
-			$html_contenido .= "alt=\"$image_id\" ";
-			$html_contenido .= "></div>";
+			$style = '';
+			#$style = "background-image:url('$thumb_file_url')";
+			// $html_contenido .= "<div class=\"thumb_in_list div_image_image_in_list\" style=\"$style\" $click_action ";
+			// $html_contenido .= "data-image_id=\"$image_id\" ";
+			// $html_contenido .= "data-parent_matrix=\"$parent\" ";
+			// $html_contenido .= "alt=\"$image_id\" ";
+			// $html_contenido .= "></div>";
+
+			$html_contenido .= '<img src="'.$thumb_file_url.'" class="thumb_in_list div_image_image_in_list" style="'.$style.'" data-image_id="'.$image_id.'" data-parent_matrix="'.$parent.'" '.$click_action.'>';
 
 			break;
 	}
@@ -29,4 +32,3 @@
 
 	# PRINT HTML
 	print $html_contenido;
-?>
