--- a/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
+++ b/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
@@ -25,13 +25,13 @@ body {
 	background-size: 18px !important;
     background-position-y: 3px !important;
     background-position-x: 6px !important;
-} 
+}
 
 
 /* tool_cataloging CASE
 	--------------------------------------------- */
 	.html_page_wrap_tool_cataloging .content_data {
-		width: 100%;		
+		width: 100%;
 	}
 
 
@@ -42,7 +42,7 @@ body {
 		}
 		.header_tool .select_fast_lang_switch {
 			float: left;
-			position: relative;	
+			position: relative;
 			top: 3px;
 			left: 10px;
 			text-transform: capitalize;
@@ -80,11 +80,11 @@ body {
 		padding: 0;
 		display: block;
 		position: absolute;
-		
+
 		//width: 100%;
-		//height: 96%;		
+		//height: 96%;
 		//overflow: hidden;
-		
+
 		width: 99.9%;
 		height: ~"calc(100% - 30px)";
 	}
@@ -98,7 +98,7 @@ body {
 		padding-left: 4px;
 		padding-right: 4px;
 		z-index: 10;
-		min-width: 400px;		
+		min-width: 400px;
 		margin-right: 72px;
 		margin-left: 151px;
 		width: auto;
@@ -155,7 +155,7 @@ body {
 			flex-basis: 96%;
 		}
 
-		
+
 	}
 
 // tool_grid_rigth
@@ -193,12 +193,12 @@ body {
 				>.component_portal_list{
 				//	border-right: 1px solid #cccccc;
 				}
-				
+
 				// portal images
 					>.component_portal_list >.component_portal_column {
 						padding-left: 0;
 						width: 50%;
-						
+
 
 						>img {
 
@@ -210,7 +210,7 @@ body {
 							object-fit: cover;
 						}
 					}
-				
+
 				// input text name
 				>.component_input_text_list {
 					padding: 1em;
@@ -219,7 +219,7 @@ body {
 					font-size: 18px;
 				}
 
-			}//end >.column_cell			
+			}//end >.column_cell
 
 			.drag_item {
 				background-image: url(../../../themes/default/move.svg);
@@ -241,7 +241,7 @@ body {
 					opacity: 0.7;
 				}
 			}
-			
+
 		}//end >.row_container
 
 	}//end rows_container
@@ -324,7 +324,7 @@ body {
 		border: none !important;
 	}
 
-	
+
 // row_used
 	.row_used {
 		transition: all 1s ease;
@@ -346,3 +346,17 @@ body {
 			line-height: 2em;
 		}*/
 	}
+
+
+
+// print
+	@media print {
+		.tool_grid_left {
+			display: none;
+		}
+	}
+
+
+
+
+
