--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -363,7 +363,7 @@ background-color: #FFFF00;
 
 	/* APLICATION LANG SELECTOR
 	------------------------------------------------------- */
-	#menu_wrapper #dedalo_aplication_langs_selector {
+	#menu_wrapper .dedalo_aplication_langs_selector {
 		float: left;
 		margin-left: 5px;
 		top: 2px;
