--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -40,7 +40,7 @@
 
 
 // html inputs
-	input[type="text"], input[type="number"], input[type="url"], input[type="password"], button[type="submit"], textarea, select, .contenteditable {
+	input[type="text"], input[type="number"], input[type="url"], input[type="password"], button[type="submit"], textarea, .contenteditable {
 
 		li & {
 			width: 100%;
