Add the behavior to new navigation

--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -335,7 +335,7 @@ background-color: #FFFF00;
 
 	/* LOGGED USERNAME
 	------------------------------------------------------- */
-	#menu_wrapper #logged_user_name {
+	.menu_wrapper .logged_user_name {
 		color: #c9c9c9;
 		float: left;
 		margin-left: 10px;
@@ -363,7 +363,7 @@ background-color: #FFFF00;
 
 	/* APLICATION LANG SELECTOR
 	------------------------------------------------------- */
-	#menu_wrapper .dedalo_aplication_langs_selector {
+	.menu_wrapper .dedalo_aplication_langs_selector {
 		float: left;
 		margin-left: 5px;
 		top: 2px;
@@ -390,7 +390,7 @@ background-color: #FFFF00;
 		height: 25px;
 		font-size: 0.9em;
 	}
-	#menu_wrapper .dedalo_aplication_langs_selector.unsync {
+	.menu_wrapper .dedalo_aplication_langs_selector.unsync {
 		color: #fdcf39;
     	opacity: 0.9;
 	}
@@ -399,7 +399,7 @@ background-color: #FFFF00;
 
 	/* LABEL SECTION NAME
 	------------------------------------------------------- */
-		#menu_wrapper #current_section_label {
+		.menu_wrapper .current_section_label {
 			right: 10px;
 			top: 0;
 			width: auto;
@@ -468,7 +468,7 @@ background-color: #FFFF00;
 
 	/* BUTTON INSPECTOR
 	------------------------------------------------------- */
-	#menu_wrapper #button_toggle_inspector {
+	.menu_wrapper .button_toggle_inspector {
 		position: relative;
 		float: right;
 		display: inline-block;
@@ -477,7 +477,7 @@ background-color: #FFFF00;
 		top: 9px;
 		width: 25px;
 		height: 25px;
-		background-image: url('../../themes/default/inspector.svg');
+		background-image: url('../../themes/default/icons/inspector.svg');
 		background-repeat: no-repeat;
 		}
 		#button_toggle_inspector .button_toggle_inspector_in_dialog {
